3.2.7
	+ Remove lock file in EBox::Util::Lock::unlock()
	+ Decode to utf8 the MySQL database results
	+ Create log database using utf8 charset
	+ Better way to set MySQL password for all the root accounts
	+ Use sharedscripts in zentyal-core logrotate to avoid triggering
	  in every log file
	+ Take into account view customizer on audit logging
	+ Show complex types (more than one field) in audit log
	  while editing by storing the dump of the value
	+ Fix EBox::Types::Composite::cmp to store changes when only last type
	  is modified
3.2.6
	+ Show confirmation dialog before upgrading to 3.3
	+ Fixed general widget packages to avoid error on 'packages to
	  upgrade' section
3.2.5
	+ Upgrade to 3.3 notification in dashboard
	+ Added new communityEdition() helper method in EBox::Global
	+ Add version to header logo
	+ Always reload page after saving changes
	+ Use AJAX call to refresh save change buttons
	+ Copy all the redis keys from 'conf' to 'ro' when saving changes of
	  any module to prevent incoherences
	+ Delete unused stopAllModules() and restartAllModules() in EBox::Global
	+ Workaround against modules changed when saving all changes
	+ Display remote services messages if they exist on Dashboard
	+ Recover from widget function exceptions
	+ Fixed mdstat output processing to remove "(auto-read-only)"
	+ Fixed audit logging of delete actions
	+ Fixed errors with row ID in ManageAdmins table
	+ Added missing EBox::Exceptions uses
	+ Fixed bug in selectSetter which hitted selects on DataForm with
	  'unique' option enabled
	+ Added EBox::Types::IPRange::addressesFromBeginToEnd class method
3.2.4
	+ Set proper trial link in advertisements
	+ Show register link in local backup when not registered
	+ Strip the 'C:\fakepath\' that chrome adds to the file input
	+ Make dump_exceptions key work also for mason exceptions
	+ Pass HTTP_PROXY system environment variable to CGIs as they are
	  used in Zentyal modules